Fixed item icons cropping and borders.
Fixed inventory price detail symbol position.
Fixed build layout "jumping" when starting to edit a build when a magzine was displayed.
Added space between item icons and the horizontal scroll bar on build cards.

--- a/src/components/item/ItemComponent.unscoped.css
+++ b/src/components/item/ItemComponent.unscoped.css
@@ -11,6 +11,10 @@
   border-color: rgba(255, 255, 255, 0.1);
 }
 
+.item-selection-dropdown .p-disabled .selected-item .item-icon {
+  border-color: rgba(255, 255, 255, 0.1);
+}
+
 .item-selection-dropdown > .p-disabled > .p-dropdown-trigger {
   opacity: 0.38;
 }
